--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -98,3 +98,19 @@ jobs:
           base: header, activity, repositories  # minimalistički classic
           filename: metrics.classic.svg
           committer_token: ${{ github.token }}
+
+
+      # 7) contributions calendar (isocalendar)
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: Rrrapce
+          base: ""                       # čist output, samo kalendar
+          template: classic
+          filename: metrics.contributions.calendar.svg
+          committer_token: ${{ github.token }}
+          config_timezone: Europe/Sarajevo
+
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year   # opcije: half-year | full-year
+
