--- a/.github/workflows/total-loc.yml
+++ b/.github/workflows/total-loc.yml
@@ -1,7 +1,7 @@
 name: Total LOC
 on:
   schedule:
-    - cron: "25 1 * * *"     # jednom dnevno
+    - cron: "25 1 * * *"
   workflow_dispatch:
 
 permissions:
@@ -17,11 +17,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Auth GH CLI
-        run: echo "${{ github.token }}" | gh auth login --with-token
-
-      - name: List repos (bez fork/archived)
         run: |
-          gh repo list "$GH_USER" --limit 200 --json name,isFork,archived,visibility \
+          echo "${{ github.token }}" | gh auth login --with-token
+
+      - name: List repos (no forks/archived)
+        run: |
+          gh repo list "$GH_USER" --limit 200 --json name,isFork,archived \
           | jq -r '.[] | select(.isFork==false and .archived==false) | .name' > repos.txt
           echo "Repos:"; cat repos.txt
 
@@ -41,36 +42,49 @@ jobs:
 
       - name: Count LOC
         run: |
-          # ignoriraj uobičajene build/venv direktorije
           EXCLUDES="--exclude-dir=node_modules --exclude-dir=dist --exclude-dir=build --exclude-dir=.git --exclude-dir=bin --exclude-dir=obj --exclude-dir=.venv --exclude-dir=venv"
           scc $EXCLUDES --format json /tmp/allrepos > loc.json
-          TOTAL=$(jq '[.[] | select(.Name=="Total") | .Code] | add' loc.json)
-          # fallback ako nema "Total" po repo-u → sumiraj sve Code
-          if [ -z "$TOTAL" ] || [ "$TOTAL" = "null" ]; then
-            TOTAL=$(jq '[.[] | .Code] | add' loc.json)
-          fi
-          # format sa hiljadarkama
-          FMT=$(python3 - <<PY
-n=int("$TOTAL"); print(f"{n:,}".replace(",", "."))
+          echo "LOC JSON size:" $(wc -c < loc.json)
+          python3 - << 'PY'
+import json, locale, os
+locale.setlocale(locale.LC_ALL, '')
+with open('loc.json','r', encoding='utf-8') as f:
+    data = json.load(f)
+# Saberi "Code" metrike (fallback ako nema 'Total' unosa)
+total = 0
+for item in data:
+    if 'Code' in item:
+        total += int(item['Code'])
+# Format sa tačkama kao razdjelnikom hiljada
+fmt = f"{total:,}".replace(",", ".")
+open('total_loc.txt','w', encoding='utf-8').write(fmt)
+print("TOTAL_LOC:", fmt)
 PY
-)
-          echo "TOTAL_LOC=$FMT" | tee total_loc.env
 
-      - name: Update README
+      - name: Update README (between markers)
         run: |
-          source total_loc.env
-          tmp=$(mktemp)
-          awk -v repl="**Total lines of code:** ${TOTAL_LOC}" '
-            BEGIN{show=1}
-            /<!--TOTAL_LOC_START-->/ {print; print repl; show=0; next}
-            /<!--TOTAL_LOC_END-->/   {show=1}
-            show{print}
-          ' README.md > "$tmp" && mv "$tmp" README.md
+          TOTAL_LOC=$(cat total_loc.txt)
+          python3 - << 'PY'
+import os, sys, re
+start = "<!--TOTAL_LOC_START-->"
+end   = "<!--TOTAL_LOC_END-->"
+line  = "**Total lines of code:** " + open('total_loc.txt','r',encoding='utf-8').read().strip()
+with open('README.md','r',encoding='utf-8') as f:
+    txt = f.read()
+if start in txt and end in txt:
+    new = re.sub(rf"{re.escape(start)}.*?{re.escape(end)}", f"{start}\n{line}\n{end}", txt, flags=re.S)
+else:
+    # ako markeri ne postoje, dodaj na kraj
+    new = txt.rstrip()+"\n\n"+start+"\n"+line+"\n"+end+"\n"
+with open('README.md','w',encoding='utf-8') as f:
+    f.write(new)
+print("README updated.")
+PY
 
       - name: Commit
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "actions@github.com"
-          git add README.md
+          git add README.md loc.json total_loc.txt || true
           git commit -m "Update Total LOC" || echo "No changes"
           git push
